--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="resources/css/style.css">
+    <link rel="stylesheet"  href="/resources/css/style.css">
     <title>Colmar Academy</title>
 </head>
 <body>
+
+<!-- Navigation Bar -->
+    <header class="nav">
+       <div class="container">
+        <img src="/resources/images/logo.svg" alt="Colmar Academy Logo" class="logo">
+
+        <nav>
+            <ul>
+                <li><a href="">On Campus</a></li>
+                <li><a href="">Online or companies</a></li>
+                <li><a href="">Sign in</a></li>
+                  </ul>
+            </nav>
+            </div>
+        </header>
     
 </body>
 </html>
