--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="resources/css/style.css">
+    <link rel="stylesheet"  href="./resources/css/style.css">
     <title>Colmar Academy</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
 <!-- Navigation Bar -->
     <header class="nav">
        <div class="container">
-        <img src="resources/images/logo.svg" alt="Colmar Academy Logo" class="logo">
+        <img src="./resources/images/logo.svg" alt="Colmar Academy Logo" class="logo">
 
         <nav>
             <ul>
