fixed mobile nav styling and responsive sections

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
  <header class="nav mobile-only">
        <div class="container mobile-only">
         <div class="navicon">
-          <img src="./resources/images/logo_icon.svg" alt="Colmar Academy Logo">
-          <img src="./resources/images/ic-login.svg">
-          <img src="./resources/images/ic-on-campus.svg">
-          <img src="./resources/images/ic-online.svg">
+          <a href="#"><img src="./resources/images/logo_icon.svg" alt="Colmar Academy Logo"></a>
+           <a href="#"><img src="./resources/images/ic-login.svg"></a>
+           <a href="#"><img src="./resources/images/ic-on-campus.svg"></a>
+           <a href="#"><img src="./resources/images/ic-online.svg"></a>
         </div>
       </div>
         </header>
@@ -100,7 +100,7 @@
 
 <div class="learning">
     <h1>Start learning</h1>
-  <div class="container desktop-only">
+  <div class="container desktop-only learning-wrapper ">
  
       <div class="box">
         <img src="./resources/images/course-software.jpg">
